Trying to fix hosted events image on mobile again AGAIN

--- a/less/agency.less
+++ b/less/agency.less
@@ -770,12 +770,14 @@ ul.social-buttons {
 
 .hosted-events {
   padding: 150px 0;
-  background: -moz-linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/build/drama-center-2.jpg') no-repeat fixed top center; /* FF3.6+ */
-  background: -webkit-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/build/drama-center-2.jpg') no-repeat fixed top center; /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/build/drama-center-2.jpg') no-repeat fixed top center; /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/build/drama-center-2.jpg') no-repeat fixed top center; /* Opera 11.10+ */
-  background: -ms-linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/build/drama-center-2.jpg') no-repeat fixed top center; /* IE10+ */
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/build/drama-center-2.jpg') no-repeat fixed top center; /* W3C */
+  background: -moz-linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/build/drama-center-2.jpg') no-repeat; /* FF3.6+ */
+  background: -webkit-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/build/drama-center-2.jpg') no-repeat; /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/build/drama-center-2.jpg') no-repeat; /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/build/drama-center-2.jpg') no-repeat; /* Opera 11.10+ */
+  background: -ms-linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/build/drama-center-2.jpg') no-repeat; /* IE10+ */
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/build/drama-center-2.jpg') no-repeat; /* W3C */
+  background-attachment: fixed;
+  background-position: top center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
